Increase default dice size

--- a/src/features/roller/Dices.module.css
+++ b/src/features/roller/Dices.module.css
@@ -1,6 +1,11 @@
-.dice {
+.dices {
+  margin-bottom: 16px;
+}
+
+.dices .dice {
   padding: 4px !important;
   margin-right: 2px;
+  margin-bottom: 0 !important;
 }
 
 .selectable {
