--- a/src/features/roller/Dices.module.css
+++ b/src/features/roller/Dices.module.css
@@ -3,12 +3,12 @@
   flex-direction: row;
   flex-wrap: wrap;
   margin-bottom: 16px;
-  max-width: 518px;
+  max-width: 456px;
 }
 
 .dices > .dice {
   padding: 4px !important;
-  margin-right: 2px;
+  margin-right: 4px;
   margin-bottom: 8px !important;
   width: 72px;
 }
@@ -51,5 +51,5 @@
 }
 
 .theme-shiny.selected.explosion {
-  border: 2px solid #0050b3;
+  box-shadow: 0px 0px 20px #ad6800;
 }
