--- a/src/features/roller/Dices.module.css
+++ b/src/features/roller/Dices.module.css
@@ -46,6 +46,14 @@
   background-color: #95de64;
 }
 
+.theme-magenta.selectable:hover {
+  background-color: #ff85c0;
+}
+
+.theme-magenta.selected {
+  background-color: #eb2f96;
+}
+
 .theme-gray.selected {
   background-color: #bfbfbf;
 }
