--- a/src/features/roller/Intent.module.css
+++ b/src/features/roller/Intent.module.css
@@ -4,5 +4,13 @@
 }
 
 .pseudo-radio {
-  margin-left: 12px;
+  border: none;
+  height: 100%;
+}
+
+.pseudo-radio > span {
+  padding-left: 16px;
+  padding-right: 16px;
+  padding-top: 19px;
+  padding-bottom: 21px;
 }
