--- a/src/features/roller/Intent.module.css
+++ b/src/features/roller/Intent.module.css
@@ -2,3 +2,9 @@
   padding: 0 24px;
   margin-top: 24px;
 }
+
+.voided :global(.ant-form-item-control-input-content):after {
+  content: "+1";
+  color: rgba(0, 0, 0, 0.45); /* Ant Design default secondary color */
+  margin-left: 12px;
+}
