--- a/src/features/roller/Dices.module.css
+++ b/src/features/roller/Dices.module.css
@@ -2,8 +2,9 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  margin-bottom: 16px;
   max-width: 456px;
+  justify-content: center;
+  margin: 16px auto 24px auto;
 }
 
 .dices > .dice {
@@ -11,6 +12,10 @@
   margin-right: 4px;
   margin-bottom: 8px !important;
   width: 72px;
+}
+
+.dices > .dice:last-child {
+  margin-right: 0;
 }
 
 .selectable {
