Form is actually a form now

--- a/src/features/heritage/index.module.css
+++ b/src/features/heritage/index.module.css
@@ -7,3 +7,11 @@
 .raw-results :global(.ant-typography) {
   margin-right: 12px;
 }
+
+.layout {
+  margin-top: 24px;
+}
+
+.layout h1 {
+  text-align: center;
+}
