--- a/src/features/heritage/index.module.css
+++ b/src/features/heritage/index.module.css
@@ -34,6 +34,10 @@
   margin: 0;
 }
 
+.layout :global(.ant-descriptions-title) {
+  text-align: center;
+}
+
 @media (max-width: 768px) {
   .layout h2 {
     text-align: center;
