--- a/src/features/heritage/Summary.module.css
+++ b/src/features/heritage/Summary.module.css
@@ -5,3 +5,13 @@
 .container :global(.ant-descriptions-title) {
   text-align: center;
 }
+
+.container :global(.ant-descriptions-item-content) {
+  word-break: normal;
+}
+
+@media (min-width: 1600px) {
+  .container {
+    max-width: 800px;
+  }
+}
