Show all menu options on small screens

--- a/src/features/navigation/Menu.module.css
+++ b/src/features/navigation/Menu.module.css
@@ -16,3 +16,9 @@
     display: none !important;
   }
 }
+
+@media (min-width: 577px) {
+  .menu > li.sm-only {
+    display: none !important;
+  }
+}
