Add some glitter
If useless will be easy to delete at least

--- a/src/features/roller/Intent.module.css
+++ b/src/features/roller/Intent.module.css
@@ -8,3 +8,7 @@
   color: rgba(0, 0, 0, 0.45); /* Ant Design default secondary color */
   margin-left: 12px;
 }
+
+.school {
+  margin-bottom: 24px;
+}
