Better use of space on small screens

--- a/src/features/roller/Intent.module.css
+++ b/src/features/roller/Intent.module.css
@@ -12,3 +12,10 @@
 .school {
   margin-bottom: 24px;
 }
+
+@media (max-width: 576px) {
+  .school {
+    margin-left: -36px;
+    margin-right: -36px;
+  }
+}
