Handle screen better on heritage

--- a/src/features/heritage/SummaryList.module.less
+++ b/src/features/heritage/SummaryList.module.less
@@ -11,7 +11,7 @@
     margin-bottom: 24px;
   }
 
-  @media (min-width: @screen-xl) {
+  @media (min-width: @screen-lg) {
     flex-direction: row;
     align-items: flex-start;
 
