Replace font defaulting to Comic Sans by webfont

--- a/src/features/heritage/Layout.module.less
+++ b/src/features/heritage/Layout.module.less
@@ -1,8 +1,7 @@
 @import (reference) "~antd/dist/antd.less";
 
 @title-color: #942b39;
-@title-font: "Brush Script MT", "Brush Script Std", "Lucida Calligraphy",
-  "Lucida Handwriting", "Apple Chancery", cursive;
+@title-font: "Julee", cursive;
 
 .layout {
   padding-top: 24px;
