--- a/src/features/roller/Summary.module.less
+++ b/src/features/roller/Summary.module.less
@@ -1,11 +1,72 @@
+@import (reference) "../../common.less";
+
+@underline-color: #a5a395; //TODO: More consistent color with rest of site
+
+.container {
+  dl,
+  dt,
+  dd {
+    margin: 0;
+  }
+
+  & > dl {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+
+    & > div {
+      padding-right: 24px;
+
+      & > dt {
+        .block-title();
+        padding-right: 24px;
+      }
+
+      & > dd {
+        margin: 12px 0;
+      }
+
+      & > dd > dl {
+        display: flex;
+        justify-content: space-around;
+        align-items: center;
+        flex-wrap: wrap;
+
+        & > div {
+          display: flex;
+          flex-direction: column-reverse;
+          padding: 0 12px;
+
+          & > dt {
+            font-weight: normal;
+            padding-right: 12px;
+            font-size: 90%;
+          }
+
+          & > dd {
+            border-bottom: 1px solid @underline-color;
+            text-align: center;
+            padding: 0 12px;
+          }
+        }
+      }
+    }
+  }
+}
+
 .dices {
   display: flex;
+
+  & > * {
+    margin-right: 16px;
+  }
+
+  img {
+    height: 48px;
+  }
 }
 
-.dices > * {
-  margin-right: 16px;
-}
-
-.dices img {
-  height: 48px;
+.center {
+  display: block;
+  text-align: center;
 }
