Try to extract some recurring CSS patterns

--- a/src/features/heritage/Summary.module.less
+++ b/src/features/heritage/Summary.module.less
@@ -1,10 +1,9 @@
 @import (reference) "~antd/dist/antd.less";
+@import (reference) "../../common.less";
 
 @label-background-color: #f0efed;
 @content-background-color: #f8f7f6;
-@label-text-color: #848f77;
 @content-text-color: @text-color;
-@border-color: #8e937f;
 
 .container {
   :global(.ant-descriptions-header) {
@@ -12,9 +11,7 @@
   }
 
   :global(.ant-descriptions-title) {
-    color: @label-text-color;
-    font-variant: small-caps;
-    border-bottom: 1px solid @border-color;
+    .block-title();
     padding-left: 8px;
   }
 
@@ -23,7 +20,7 @@
   }
 
   :global(.ant-descriptions-item-label) {
-    color: @label-text-color;
+    color: @text-green;
   }
 
   :global(.ant-descriptions-item-content),
@@ -47,14 +44,14 @@
     :global(.ant-descriptions-item-label:last-child),
   :global(.ant-descriptions-bordered)
     :global(.ant-descriptions-item-content:last-child) {
-    border: 1px solid @border-color;
+    border: 1px solid @border-green;
   }
 
   :global(.ant-descriptions-view) tbody > tr:first-child {
-    border-top: 4px double @border-color;
+    border-top: 4px double @border-green;
   }
 
   :global(.ant-descriptions-view) tbody > tr:last-child {
-    border-bottom: 4px double @border-color;
+    border-bottom: 4px double @border-green;
   }
 }
