More consistent (but not really better) color

--- a/src/features/roller/Summary.module.less
+++ b/src/features/roller/Summary.module.less
@@ -1,6 +1,6 @@
 @import (reference) "../../common.less";
 
-@underline-color: #a5a395; //TODO: More consistent color with rest of site
+@underline-color: #778771; //TODO: More consistent color with rest of site
 
 .container {
   dl,
@@ -41,10 +41,11 @@
             font-weight: normal;
             padding-right: 12px;
             font-size: 90%;
+            border-top: 1px solid @underline-color;
+            color: @underline-color;
           }
 
           & > dd {
-            border-bottom: 1px solid @underline-color;
             text-align: center;
             padding: 0 12px;
           }
