Show assists alongside ring/skill in form

--- a/src/features/roller/Intent.module.less
+++ b/src/features/roller/Intent.module.less
@@ -7,10 +7,47 @@
   padding-bottom: 0;
 }
 
-.voided :global(.ant-form-item-control-input-content):after {
-  content: "+1";
-  color: rgba(0, 0, 0, 0.45); /* Ant Design default secondary color */
+.plus :global(.ant-form-item-control-input-content):after {
+  color: @text-color-secondary;
   margin-left: 12px;
+}
+
+// Okay, _maybe_ there is a better way to do that
+.plus-01 :global(.ant-form-item-control-input-content):after {
+  content: "+1";
+}
+.plus-02 :global(.ant-form-item-control-input-content):after {
+  content: "+2";
+}
+.plus-03 :global(.ant-form-item-control-input-content):after {
+  content: "+3";
+}
+.plus-04 :global(.ant-form-item-control-input-content):after {
+  content: "+4";
+}
+.plus-05 :global(.ant-form-item-control-input-content):after {
+  content: "+5";
+}
+.plus-06 :global(.ant-form-item-control-input-content):after {
+  content: "+6";
+}
+.plus-07 :global(.ant-form-item-control-input-content):after {
+  content: "+7";
+}
+.plus-08 :global(.ant-form-item-control-input-content):after {
+  content: "+8";
+}
+.plus-09 :global(.ant-form-item-control-input-content):after {
+  content: "+9";
+}
+.plus-10 :global(.ant-form-item-control-input-content):after {
+  content: "+10";
+}
+.plus-11 :global(.ant-form-item-control-input-content):after {
+  content: "+11";
+}
+.plus-12 :global(.ant-form-item-control-input-content):after {
+  content: "+12";
 }
 
 .school {
