Clean up useless tooltip

--- a/src/features/roller/Dices.module.less
+++ b/src/features/roller/Dices.module.less
@@ -12,6 +12,10 @@
     margin-bottom: 8px !important;
     width: 72px;
 
+    img {
+      width: 100%;
+    }
+
     &:last-child {
       margin-right: 0;
     }
