--- a/src/features/roller/Keep.module.less
+++ b/src/features/roller/Keep.module.less
@@ -19,7 +19,7 @@
   margin-top: 24px;
 }
 
-.add-kept-form > div:last-child {
+.add-kept-form > div > div:last-child {
   text-align: right;
 
   @media (min-width: @screen-sm) {
