--- a/src/common.less
+++ b/src/common.less
@@ -20,3 +20,9 @@
   border-top: 4px double @border-green;
   border-bottom: 4px double @border-green;
 }
+
+.red-title {
+  color: #942b39;
+  font-family: "Julee", cursive;
+  font-weight: normal;
+}
