--- a/src/features/roller/Dices.module.less
+++ b/src/features/roller/Dices.module.less
@@ -26,10 +26,9 @@
   cursor: pointer;
   display: flex;
   flex-direction: column;
-  justify-content: center;
 
   input {
-    margin: 4px;
+    margin: 6px auto 4px auto;
     cursor: pointer;
   }
 
