Fix the slider display
Sorta

--- a/src/features/roller/Intent.module.less
+++ b/src/features/roller/Intent.module.less
@@ -41,6 +41,16 @@
       margin: 0 auto;
     }
   }
+
+  .mode-slider {
+    float: left;
+  }
+
+  .mode-slider-hint {
+    float: left;
+    position: relative;
+    top: 0;
+  }
 }
 
 .plus :global(.ant-form-item-control-input-content):after {
