Fix a centering issue

--- a/src/features/roller/Intent.module.less
+++ b/src/features/roller/Intent.module.less
@@ -12,7 +12,8 @@
     flex-wrap: wrap;
 
     & > * {
-      margin-right: 24px;
+      margin-left: 12px;
+      margin-right: 12px;
     }
 
     :global(.ant-select-auto-complete) {
