Explain better Assistance

--- a/src/features/roller/Intent.module.less
+++ b/src/features/roller/Intent.module.less
@@ -43,6 +43,15 @@
       margin: 0 auto;
     }
   }
+
+  .assist-container {
+    padding-bottom: 12px;
+
+    :global(.ant-form-item-control-input-content) {
+      display: flex;
+      justify-content: center;
+    }
+  }
 }
 
 .plus :global(.ant-form-item-control-input-content):after {
