--- a/src/features/roller/Intent.module.less
+++ b/src/features/roller/Intent.module.less
@@ -52,6 +52,14 @@
       justify-content: center;
     }
   }
+
+  .channeled-summary {
+    text-align: center;
+    img {
+      height: 48px;
+      margin-left: 8px;
+    }
+  }
 }
 
 .plus :global(.ant-form-item-control-input-content):after {
