Make "fake" dice stand out more
The idea is sound
The implementation is... up to debate

--- a/src/features/roller/result/Resolve.module.less
+++ b/src/features/roller/result/Resolve.module.less
@@ -17,3 +17,12 @@
 .channel-text {
   text-align: center;
 }
+
+.set-die {
+  &:after {
+    content: "*";
+    position: absolute;
+    margin-top: -8px;
+    color: @text-color-secondary;
+  }
+}
