--- a/src/common.less
+++ b/src/common.less
@@ -5,6 +5,7 @@
 
 @torii-background-color: #f8f7f6;
 @torii-text-color: @text-color;
+@addkept-die-color: #b37feb;
 
 .block-title {
   color: @text-green;
