Slightly less terrible color for reroll
Still based on https://ant.design/docs/spec/colors

--- a/src/features/roller/Dices.module.less
+++ b/src/features/roller/Dices.module.less
@@ -47,11 +47,11 @@
 }
 
 .theme-reroll.selectable:hover {
-  background-color: #c9a84a;
+  background-color: #5cdbd3;
 }
 
 .theme-reroll.selected {
-  background-color: #bca258;
+  background-color: #87e8de;
 }
 
 .theme-gray.selected {
