Remove dice theme
They were removed...
But at which cost?

--- a/src/common.less
+++ b/src/common.less
@@ -6,6 +6,7 @@
 @torii-background-color: #f8f7f6;
 @torii-text-color: @text-color;
 @addkept-die-color: #b37feb;
+@reroll-die-color: #87e8de;
 
 .block-title {
   color: @text-green;
