Use the same images for dice everywhere

--- a/src/features/roller/Dices.module.less
+++ b/src/features/roller/Dices.module.less
@@ -10,10 +10,10 @@
     padding: 4px !important;
     margin-right: 4px;
     margin-bottom: 8px !important;
-    width: 72px;
 
     img {
-      width: 100%;
+      width: 60px;
+      height: 60px;
     }
 
     &:last-child {
