--- a/src/features/roller/glitter/AbilityDescription.module.less
+++ b/src/features/roller/glitter/AbilityDescription.module.less
@@ -2,13 +2,14 @@
 
 .card {
   display: flex;
+  flex-direction: column;
   align-items: center;
 
   .text > p:last-child {
     margin-bottom: 0;
   }
 
-  @media (max-width: @screen-md) {
-    flex-direction: column;
+  @media (min-width: @screen-md) {
+    flex-direction: row;
   }
 }
