Experimental optimization feature
A revert doesn't cost much I guess

--- a/src/features/roller/glitter/AbilityDescription.module.less
+++ b/src/features/roller/glitter/AbilityDescription.module.less
@@ -11,5 +11,8 @@
 
   @media (min-width: @screen-md) {
     flex-direction: row;
+    :global(.ant-card-cover) img {
+      width: 240px;
+    }
   }
 }
