--- a/src/features/probabilities/Calculator.module.less
+++ b/src/features/probabilities/Calculator.module.less
@@ -1,8 +1,12 @@
-@import (reference) "~antd/dist/antd.less";
+@import (reference) "../../common.less";
+
+.layout {
+  background-color: @collapse-content-bg;
+}
 
 .form {
+  .torii-box();
   margin: 24px auto;
-  padding: 0 16px;
   max-width: @screen-md;
   justify-content: center;
 
