Slightly less weird variable name

--- a/src/common.less
+++ b/src/common.less
@@ -8,6 +8,8 @@
 @addkept-die-color: #b37feb;
 @reroll-die-color: #87e8de;
 
+@default-background-color: @collapse-content-bg;
+
 .block-title {
   color: @text-green;
   font-variant: small-caps;
