--- a/src/features/probabilities/Calculator.module.less
+++ b/src/features/probabilities/Calculator.module.less
@@ -1,7 +1,7 @@
 @import (reference) "../../common.less";
 
 .layout {
-  background-color: @collapse-content-bg;
+  background-color: @default-background-color;
 }
 
 .form {
