--- a/src/features/roller/IdentifiedRoll.module.less
+++ b/src/features/roller/IdentifiedRoll.module.less
@@ -1,6 +1,6 @@
-@import (reference) "~antd/dist/antd.less";
+@import (reference) "../../common.less";
 
 .ongoing {
-  background-color: @collapse-content-bg;
+  background-color: @default-background-color;
   padding: 24px;
 }
