--- a/src/features/display/CharacterSheet.module.less
+++ b/src/features/display/CharacterSheet.module.less
@@ -15,7 +15,8 @@
     justify-content: space-around;
 
     & > div {
-      padding-right: 24px;
+      padding-left: 12px;
+      padding-right: 12px;
 
       & > dt {
         .block-title();
