--- a/src/features/heritage/Roll.module.less
+++ b/src/features/heritage/Roll.module.less
@@ -1,3 +1,5 @@
+@import (reference) "~antd/dist/antd.less";
+
 .footer {
   margin: 0 auto;
   margin-top: 24px;
@@ -12,4 +14,8 @@
 
 .footer > *:last-child {
   margin-right: 0;
+}
+
+.expandable {
+  max-width: @screen-xl !important;
 }
