--- a/src/features/heritage/Summary.module.less
+++ b/src/features/heritage/Summary.module.less
@@ -14,6 +14,7 @@
 
   :global(.ant-descriptions-item-content) {
     word-break: normal;
+    vertical-align: top;
   }
 
   :global(.ant-descriptions-item-label) {
@@ -51,4 +52,8 @@
   :global(.ant-descriptions-view) tbody > tr:last-child {
     border-bottom: 4px double @border-green;
   }
+}
+
+.justify {
+  text-align: justify;
 }
