--- a/src/features/heritage/Roll.module.less
+++ b/src/features/heritage/Roll.module.less
@@ -6,14 +6,14 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-}
 
-.footer > * {
-  margin-right: 24px;
-}
+  & > * {
+    margin-right: 24px;
+  }
 
-.footer > *:last-child {
-  margin-right: 0;
+  & > *:last-child {
+    margin-right: 0;
+  }
 }
 
 .expandable {
