Integrate dice to default context

--- a/src/features/heritage/Context.module.less
+++ b/src/features/heritage/Context.module.less
@@ -4,4 +4,9 @@
   background-color: @torii-background-color;
   padding: 12px;
   padding-bottom: 0;
+  max-width: @screen-xs;
+}
+
+.expanded {
+  max-width: @screen-lg;
 }
