Improve box readability

--- a/src/common.less
+++ b/src/common.less
@@ -25,6 +25,13 @@
   border-bottom: 4px double @border-green;
 }
 
+.torii-box-light {
+  padding: 12px;
+  color: @torii-text-color;
+  background-color: @torii-background-color;
+  border: 1px solid @border-green;
+}
+
 .red-title {
   color: #942b39;
   font-family: "Julee", cursive;
