--- a/src/features/heritage/Context.module.less
+++ b/src/features/heritage/Context.module.less
@@ -1,8 +1,7 @@
 @import (reference) "../../common.less";
 
 .container {
-  background-color: @torii-background-color;
-  padding: 12px;
+  .torii-box-light();
   padding-bottom: 0;
   max-width: @screen-xs;
 }
