Make heritage instruction stand out more

--- a/src/features/heritage/Layout.module.less
+++ b/src/features/heritage/Layout.module.less
@@ -6,8 +6,7 @@
   background-size: cover;
   flex: 1;
 
-  & > h1,
-  & > p {
+  & > h1 {
     text-align: center;
     padding: 12px;
   }
@@ -25,5 +24,17 @@
 
   & > *:last-child {
     margin-bottom: 0;
+  }
+}
+
+.instruction {
+  text-align: center;
+
+  & > p {
+    display: inline-block;
+    padding: 12px 24px;
+    margin: 0;
+    font-weight: bold;
+    background-color: white;
   }
 }
