Improve readability of heritage name

--- a/src/features/heritage/Summary.module.less
+++ b/src/features/heritage/Summary.module.less
@@ -10,6 +10,7 @@
   :global(.ant-descriptions-title) {
     .block-title();
     padding-left: 8px;
+    font-size: 18px;
   }
 
   :global(.ant-descriptions-item-content) {
