Add "copy link" to heritage

--- a/src/features/heritage/StaticRoll.module.less
+++ b/src/features/heritage/StaticRoll.module.less
@@ -7,4 +7,12 @@
 .go-back-container {
   .expandable();
   text-align: right;
+
+  & > * {
+    margin-right: 24px;
+
+    &:last-child {
+      margin-right: 0;
+    }
+  }
 }
