Use hash to lock search
This might be getting out of hand

--- a/src/features/browse/Search.module.less
+++ b/src/features/browse/Search.module.less
@@ -1,8 +1,7 @@
 @import (reference) "../../common.less";
 
 .container {
-  margin: 0 12px;
-  padding: 12px;
+  padding: 12px 24px;
   background-color: @default-background-color;
 
   h2 {
@@ -40,4 +39,8 @@
   :global(.ant-collapse-content-box) {
     padding-left: 0;
   }
+}
+
+.anchor {
+  float: right;
 }
