--- a/src/features/trinket/Map.module.less
+++ b/src/features/trinket/Map.module.less
@@ -1,9 +1,15 @@
+@import (reference) "~antd/dist/antd.less";
+
 .container {
   padding: 12px;
   padding-bottom: 0;
   display: flex;
   flex-direction: column;
   height: calc(~"100vh - 64px");
+
+  & > * {
+    margin-bottom: 12px;
+  }
 }
 
 .scroll-container {
@@ -11,21 +17,19 @@
   flex: 1;
 }
 
-.legend {
-  padding: 18px;
-  background-color: #1d2553;
-  :global(.ant-list-item) {
-    color: white;
+.search {
+  :global(.ant-select) {
+    width: 240px;
+    margin-right: 18px;
   }
-  margin: 0 -12px;
-  margin-top: 12px;
 
-  :global(.ant-list-pagination) {
+  span:global(.ant-typography) {
+    display: block;
     margin-top: 12px;
 
-    & > ul {
-      display: inline-block;
-      background-color: white;
+    @media (min-width: @screen-sm) {
+      display: inline;
+      margin-top: 0;
     }
   }
 }
