Show position on map

--- a/src/features/trinket/Map.module.less
+++ b/src/features/trinket/Map.module.less
@@ -33,3 +33,19 @@
     }
   }
 }
+
+.fixed-bar {
+  position: fixed;
+  background-color: #fa8c16;
+  opacity: 0.5;
+}
+
+.horizontal-bar {
+  .fixed-bar();
+  height: 16px;
+}
+
+.vertical-bar {
+  .fixed-bar();
+  width: 16px;
+}
