--- a/src/features/trinket/Map.module.less
+++ b/src/features/trinket/Map.module.less
@@ -1,15 +1,13 @@
 @import (reference) "~antd/dist/antd.less";
 
 .container {
-  padding: 12px;
-  padding-bottom: 0;
   display: flex;
   flex-direction: column;
   height: calc(~"100vh - 64px");
+}
 
-  & > * {
-    margin-bottom: 12px;
-  }
+.text {
+  padding: 24px;
 }
 
 .scroll-container {
