Allow to configure "custom schools"

--- a/src/features/roller/Intent.module.less
+++ b/src/features/roller/Intent.module.less
@@ -67,6 +67,13 @@
     > :global(.ant-collapse-header) {
     margin-top: 0;
   }
+
+  .custom-school {
+    background-size: cover;
+    padding: 24px;
+    padding-bottom: 12;
+    margin-bottom: 24px;
+  }
 }
 
 .plus :global(.ant-form-item-control-input-content):after {
