Rework of modifiers list display
Was getting out of hand as a long string

--- a/src/features/roller/Summary.module.less
+++ b/src/features/roller/Summary.module.less
@@ -20,3 +20,12 @@
   display: block;
   text-align: center;
 }
+
+.other-modifiers {
+  display: flex;
+  flex-wrap: wrap;
+
+  & > * {
+    margin-left: 24px;
+  }
+}
