First custom addkept school version

--- a/src/features/roller/Intent.module.less
+++ b/src/features/roller/Intent.module.less
@@ -37,7 +37,8 @@
     }
   }
 
-  .channel {
+  .channel,
+  .addkept {
     button {
       display: block;
       margin: 0 auto;
@@ -53,7 +54,8 @@
     }
   }
 
-  .channeled-summary {
+  .channeled-summary,
+  .addkept-summary {
     text-align: center;
     img {
       height: 48px;
