Add extended display mode for dice

--- a/src/features/roller/Dices.module.less
+++ b/src/features/roller/Dices.module.less
@@ -1,3 +1,5 @@
+@import (reference) "../../common.less";
+
 .dices {
   display: flex;
   flex-direction: row;
@@ -18,6 +20,23 @@
 
     &:last-child {
       margin-right: 0;
+    }
+
+    &.extended {
+      border: 1px dashed black;
+
+      & > div {
+        display: flex;
+        align-items: center;
+
+        & > img + div {
+          margin-left: 8px;
+          margin-right: 4px;
+          display: flex;
+          flex-direction: column;
+          text-align: center;
+        }
+      }
     }
   }
 }
