--- a/src/features/roller/Keep.module.less
+++ b/src/features/roller/Keep.module.less
@@ -7,6 +7,14 @@
   & > button {
     margin-bottom: 24px;
   }
+
+  &.extended {
+    max-width: @screen-lg;
+
+    form {
+      max-width: @screen-lg;
+    }
+  }
 }
 
 .content {
