--- a/src/features/roller/Dices.module.less
+++ b/src/features/roller/Dices.module.less
@@ -35,6 +35,11 @@
           display: flex;
           flex-direction: column;
           text-align: center;
+
+          & > span {
+            padding: 4px;
+            background-color: fade(white, 75%);
+          }
         }
       }
     }
