Fix background copy-paste
I don't even remember the original reason for not doing a class

--- a/src/common.less
+++ b/src/common.less
@@ -37,3 +37,8 @@
   font-family: "Julee", cursive;
   font-weight: normal;
 }
+
+.paper-background {
+  background-image: url(./background.jpg);
+  background-size: cover;
+}
