--- a/src/features/display/Title.module.less
+++ b/src/features/display/Title.module.less
@@ -1,9 +1,9 @@
 @import (reference) "../../common.less";
 
 .title {
+  .paper-background();
   text-align: center;
   padding: 16px 0;
-  background-size: cover;
   &:global(.ant-typography) {
     .red-title();
     margin: 0;
