--- a/src/features/roller/Intent.module.less
+++ b/src/features/roller/Intent.module.less
@@ -71,7 +71,7 @@
   }
 
   .custom-school {
-    background-size: cover;
+    .paper-background();
     padding: 24px;
     padding-bottom: 12;
     margin-bottom: 24px;
