--- a/src/features/roller/glitter/AbilityDescription.module.less
+++ b/src/features/roller/glitter/AbilityDescription.module.less
@@ -1,6 +1,7 @@
-@import (reference) "~antd/dist/antd.less";
+@import (reference) "../../../common.less";
 
 .card {
+  .paper-background();
   display: flex;
   flex-direction: column;
   align-items: center;
