--- a/src/features/heritage/Layout.module.less
+++ b/src/features/heritage/Layout.module.less
@@ -1,9 +1,9 @@
 @import (reference) "../../common.less";
 
 .layout {
+  .paper-background();
   padding-top: 24px;
   padding-bottom: 24px;
-  background-size: cover;
   flex: 1;
 
   & > h1 {
